# mocap_optitrack

./: CMakeLists.txt  README.md
config/: mocap.yaml
include/mocap_optitrack/: mocap_config.h  mocap_datapackets.h
src/: mocap_config.cpp  mocap_datapackets.cpp  mocap_node.cpp
test/: ball_base_frame_publisher.cpp  ball_traje_recorder.cpp
